--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CART Profile Demo 2023</title>
+    <title>Anthony Santiago</title>
 
     <!-- Link your stylesheet below this line -->
     <link rel="stylesheet" href="app.css">
@@ -101,7 +101,7 @@
 
             <!-- Modify the items below make them your own, edit the numbers or text between the > and < symbols -->
 			<div class="box">
-				<span class="value"></span> <!-- Change the number to go with the title on the line below -->
+				<span class="value">12</span> <!-- Change the number to go with the title on the line below -->
 				<span class="parameter">Year <br> 12</span> <!-- Change the title to go with the number on the line above -->
 			</div>
 			<div class="box">
