--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
             </div>
 			
 			<div class="actions">
-				<button class="btn">Follow</button>
-				<button class="btn">Message</button>
-			</div>
-
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                    <button class="btn">Follow</button>
+                </a>
+                <button class="btn">Message</button>
+            </div>
+            
             <div id="close"></div>
-		</div>
+            
 		
 		<div class="stats panel">
 
