--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anthony Santiago</title>
+    <title>Anthony Santiago's First Website</title>
 
     <!-- Link your stylesheet below this line -->
     <link rel="stylesheet" href="app.css">
@@ -21,7 +21,7 @@
                 <div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-                <img src="mario.png" alt="Mario">
+                <img src="mario.png" alt="mario">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
                 <div class='overlay'></div>
@@ -33,7 +33,7 @@
                 <div class="name1">
 
                 <!-- Replace the name below with your name -->
-                     Anthony Santiago
+                    Anthony Santiago
                 <!-- Replace the name above with your name -->
 
                 </div>
@@ -47,7 +47,7 @@
                             <!-- Replace the items below with your own, edit between the > and < symbols -->
 
                             <div class="element">Developer</div>
-                            <div class="element">Designer</div>
+                            <div class="element">Beatmaker</div>
                             <div class="element">Student</div>
                             <div class="element">Producer</div>
 
@@ -109,12 +109,12 @@
 				<span class="parameter">States <br> Visited</span>
 			</div>
 			<div class="box">
-				<span class="value">2</span>
-				<span class="parameter">Published <br> Sites</span>
+				<span class="value">1</span>
+				<span class="parameter">Published <br> Site</span>
 			</div>
             <div class="box">
 				<span class="value">2</span>
-				<span class="parameter">Computers <br> Built</span>
+				<span class="parameter">Computer <br> Built</span>
 			</div>
             <!-- Modify the items above make them your own, edit the numbers or text between the > and < symbols -->
 
