Changed descriptions, testing

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 				<span class="parameter">Grade <br> 12</span> <!-- Change the title to go with the number on the line above -->
 			</div>
 			<div class="box">
-				<span class="value">14</span>
-				<span class="parameter">States <br> Visited</span>
+				<span class="value">20 Minutes</span>
+				<span class="parameter">BOTW <br> Any% Run Time</span>
 			</div>
 			<div class="box">
 				<span class="value">1</span>
@@ -114,7 +114,7 @@
 			</div>
             <div class="box">
 				<span class="value">2</span>
-				<span class="parameter">Computer <br> Built</span>
+				<span class="parameter">Computers <br> Built</span>
 			</div>
             <!-- Modify the items above make them your own, edit the numbers or text between the > and < symbols -->
 
