--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             </div>
 			
 			<div class="actions">
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
 				<button class="btn">Follow</button>
 				<button class="btn">Message</button>
 			</div>
