Added new links, changed CSS code color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                             <!-- Replace the items below with your own, edit between the > and < symbols -->
 
-                            <div class="element">Developer</div>
+                            <div class="element">Designer</div>
                             <div class="element">Beatmaker</div>
                             <div class="element">Student</div>
                             <div class="element">Producer</div>
@@ -67,7 +67,7 @@
 				<div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-				<img src="mario.png" alt="Mario">
+				<img src="mario.png" alt="Mario AI Generated">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
 
@@ -92,6 +92,7 @@
 			<div class="actions">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
 				<button class="btn">Follow</button>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"></a>
 				<button class="btn">Message</button>
 			</div>
 
