--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="actions">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
 				<button class="btn">Follow</button>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"></a>
+                <a href="https://www.lttstore.com/" target="_blank"></a>
 				<button class="btn">Message</button>
 			</div>
 
@@ -108,7 +108,7 @@
 			</div>
 			<div class="box">
 				<span class="value">20 Minutes</span>
-				<span class="parameter">BOTW <br> Any% Run Time</span>
+				<span class="parameter">Breath of the Wild <br> Any% Run Time</span>
 			</div>
 			<div class="box">
 				<span class="value">1</span>
