--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			
 			<div class="actions">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-				<button class="btn">Follow</button>
+				<button class="btn">Click Me</button>
                 <a href="https://www.lttstore.com/" target="_blank"></a>
 				<button class="btn">Message</button>
 			</div>
