Updated with correct time

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 				<span class="parameter">Grade <br> 12</span> <!-- Change the title to go with the number on the line above -->
 			</div>
 			<div class="box">
-				<span class="value">20 Minutes</span>
-				<span class="parameter">Breath of the Wild <br> Any% Run Time</span>
+				<span class="value">47 Minutes</span>
+				<span class="parameter">Breath of the Wild <br>Any% Speedrun</span>
 			</div>
 			<div class="box">
 				<span class="value">1</span>
