--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 			<div class="actions">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
 				<button class="btn">Click Me</button>
-                <a href="https://www.lttstore.com/" target="_blank"></a>
 				<button class="btn">Message</button>
 			</div>
 
@@ -108,7 +107,7 @@
 			</div>
 			<div class="box">
 				<span class="value">47 Minutes</span>
-				<span class="parameter">Breath of the Wild <br>Any% Speedrun</span>
+				<span class="parameter">Breath of the Wild <br> Any% Speedrun Time</span>
 			</div>
 			<div class="box">
 				<span class="value">1</span>
