--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 			<div class="actions">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
 				<button class="btn">Click Me</button>
+                <a href="https://www.lttstore.com/" target="_blank"></a>
 				<button class="btn">Message</button>
 			</div>
 
