--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
             </div>
 			
 			<div class="actions">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="btn">
 				<button class="btn">Click Me</button>
-                <a href="https://www.lttstore.com/" target="_blank"></a>
 				<button class="btn">Message</button>
 			</div>
 
