--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 			
 			<div class="actions">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="btn">
-				<button class="btn">Follow</button>
-                <a href="https://www.porsche.com/usa/?cs_redirect=1" target="btn2"></a>
+				<button class="btn">Click Me</button>
 				<button class="btn2">Message</button>
 			</div>
 
