--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="actions">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="btn">
 				<button class="btn">Click Me</button>
-				<button class="btn2">Message</button>
+				<button class="btn">Message</button>
 			</div>
 
             <div id="close"></div>
