--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
 
             </div>
 			
-			<div class="actions">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="btn">
-				<button class="btn">Click Me</button>
+            <div class="actions">
+				<button class="btn">Follow</button>
 				<button class="btn">Message</button>
 			</div>
+
+            <div id="close"></div>
+		</div>
 
             <div id="close"></div>
 		</div>
