--- a/index.html
+++ b/index.html
@@ -89,13 +89,11 @@
 
             </div>
 			
-            <div class="actions">
-				<button class="btn">Follow</button>
+			<div class="actions">
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+				<button class="btn">Click Me</button>
 				<button class="btn">Message</button>
 			</div>
-
-            <div id="close"></div>
-		</div>
 
             <div id="close"></div>
 		</div>
