--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<div class="stats panel">
 
             <!-- Modify the items below make them your own, edit the numbers or text between the > and < symbols -->
-			<div class="box">
+			<div class="boxs">
 				<span class="value">12</span> <!-- Change the number to go with the title on the line below -->
 				<span class="parameter">Grade <br> 12</span> <!-- Change the title to go with the number on the line above -->
 			</div>
