--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             </div>
 			
 			<div class="actions">
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
 				<button class="btn">Click Me</button>
 				<button class="btn">Message</button>
 			</div>
@@ -100,7 +101,7 @@
 		<div class="stats panel">
 
             <!-- Modify the items below make them your own, edit the numbers or text between the > and < symbols -->
-			<div class="boxs">
+			<div class="box">
 				<span class="value">12</span> <!-- Change the number to go with the title on the line below -->
 				<span class="parameter">Grade <br> 12</span> <!-- Change the title to go with the number on the line above -->
 			</div>
