--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anthony Santiago's First Website</title>
+    <title>Anthony Santiago's first website</title>
 
     <!-- Link your stylesheet below this line -->
     <link rel="stylesheet" href="app.css">
@@ -21,7 +22,7 @@
                 <div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-                <img src="mario.png" alt="mario">
+                <img src="mario.png" alt="Mario AI">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
                 <div class='overlay'></div>
@@ -46,10 +47,10 @@
 
                             <!-- Replace the items below with your own, edit between the > and < symbols -->
 
+                            <div class="element">Developer</div>
                             <div class="element">Designer</div>
-                            <div class="element">Beatmaker</div>
                             <div class="element">Student</div>
-                            <div class="element">Producer</div>
+                            <div class="element">Audiophile</div>
 
                             <!-- for a smooth transistion animation, repeat your first item below-->
                             <div class="element">Developer</div>
@@ -67,7 +68,7 @@
 				<div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-				<img src="mario.png" alt="Mario AI Generated">
+				<img src="mario.png" alt="Mario AI">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
 
@@ -83,15 +84,14 @@
 			<div class="job">
                 
                 <!-- Replace the job below with your job or a clean subtitle of your choice -->
-                CART Student
+                CART Web App Student
                 <!-- Replace the job below with your job or a clean subtitle of your choice -->
             
 
             </div>
 			
 			<div class="actions">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-				<button class="btn">Click Me</button>
+				<button class="btn">Follow</button>
 				<button class="btn">Message</button>
 			</div>
 
@@ -107,7 +107,7 @@
 			</div>
 			<div class="box">
 				<span class="value">47 Minutes</span>
-				<span class="parameter">Breath of the Wild <br> Any% Speedrun Time</span>
+				<span class="parameter">Breath of the Wild <br> speedrun time</span>
 			</div>
 			<div class="box">
 				<span class="value">1</span>
@@ -115,7 +115,7 @@
 			</div>
             <div class="box">
 				<span class="value">2</span>
-				<span class="parameter">Computers <br> Built</span>
+				<span class="parameter">Computers <br> Build</span>
 			</div>
             <!-- Modify the items above make them your own, edit the numbers or text between the > and < symbols -->
 
