--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			</div>
             <div class="box">
 				<span class="value">2</span>
-				<span class="parameter">Computers <br> Build</span>
+				<span class="parameter">Computers <br> Built</span>
 			</div>
             <!-- Modify the items above make them your own, edit the numbers or text between the > and < symbols -->
 
