--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
 
             </div>
-			
+			<!--originally wanted to add a link for a rick roll, but it kept breaking :()-->
 			<div class="actions">
 				<button class="btn">Follow</button>
 				<button class="btn">Message</button>
